tests/unit/default/syntax-error/047-create-table-parens-name-colon-type-params-null-eq-str.x.t
---- IN ----
+%table(id:decimal(10,2)?='string'|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...imal(10,2)?='string'` near `|` at position 34 - at line 1
---- EXIT ----
1
